# ampere

./: .gitignore  Makefile  README.md
core/: Cargo.toml  build.rs
core/.cargo/: config.toml
core/examples/: basic_playback.rs
core/src/: eq.rs  lib.rs  metadata.rs  playlist.rs  theme.rs  visualizer.rs
core/tests/: integration_test.rs
core/uniffi-bindings/: ampere_core.udl
macos/Ampere.app/Contents/: Info.plist
macos/Ampere/Ampere/: AmpereApp.swift  AnalyticsView.swift  AudioEffects.swift  AudioPlayer.swift  AudioVisualizer.swift  ChannelSettings.swift  ContentView.swift  CrossfadeManager.swift  DailySuggestions.swift  DailySuggestionsView.swift  Equalizer.swift  Info.plist  ListeningAnalytics.swift  MenuBarManager.swift  MetadataExtractor.swift  OnlineSearchService.swift  PlayerViewModel.swift  Playlist.swift  PlaylistControlsView.swift  PlaylistGrouping.swift  PlaylistGroupingView.swift  PlaylistImportExport.swift  PlaylistPersistence.swift  PluginManagerView.swift  PluginSystem.swift  RealTimeEQAnalyzer.swift  ReplayGainProcessor.swift  SearchView.swift  SettingsView.swift  SpatialAudio3D.swift  ThemeManager.swift  WinampEQDisplay.swift  WinampLyricsWindow.swift  WinampPlayerView.swift  WinampWindows.swift  WindowStyleModifier.swift
macos/Ampere/Ampere.xcodeproj/: project.pbxproj
macos/Ampere/Ampere.xcodeproj/xcuserdata/makalin.xcuserdatad/xcschemes/: xcschememanagement.plist
windows/: Ampere.sln
windows/Ampere/: Ampere.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  ThemeManager.cs  app.manifest
(+1 files in other folders)
