[package]
name = "ampere-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ampere_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Audio playback
rodio = "0.18"
cpal = "0.15"

# Audio decoding
symphonia = { version = "0.5", features = ["all"] }

# Audio metadata
id3 = "1.13"
metaflac = "0.2"

# UniFFI for bindings
uniffi = "0.30"
uniffi_bindgen = "0.30"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Collections
indexmap = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Time handling
chrono = "0.4"

[build-dependencies]
uniffi_build = "0.30"

